--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -7,8 +7,16 @@
                 <t t-set="title">Programmes</t>
                 <h1 t-esc="'Programmes'"/>
                 <div class="oe_structure" />
+                <t t-set="count" t-value="1" />
                 <t t-foreach="breadcrumb" t-as="breadcrumb_item">
-                    <a t-att-href="'/programmes/%s' % breadcrumb_item['uri']"><t t-esc="breadcrumb_item['name']" /></a><span> &gt; </span>
+                    <t t-if="count &lt; len(breadcrumb)">
+                        <a t-att-href="'/programmes/%s' % breadcrumb_item['uri']"><t t-esc="breadcrumb_item['name']" /></a>
+                        <t t-if="len(breadcrumb) != 1"><span> &gt; </span></t>
+                        <t t-set="count" t-value="count + 1" />
+                    </t>
+                    <t t-else="1">
+                        <span><t t-esc="breadcrumb_item['name']" /></span>
+                    </t>
                 </t>
                 <br/>
                 <div class="my-2">
