fix issue in contact view

--- a/custom_partner_fields/views/res_partner_view.xml
+++ b/custom_partner_fields/views/res_partner_view.xml
@@ -48,7 +48,9 @@
                 >
                     <group>
                         <field name="memoir_titles_ids">
-                            <field name="name"/>
+                            <tree>
+                                <field name="name"/>
+                            </tree>
                         </field>
                         <field name="internships_ids">
                             <tree>
