--- a/school_evaluations/views/evaluation_view.xml
+++ b/school_evaluations/views/evaluation_view.xml
@@ -100,7 +100,7 @@
                     <field name="decision"/>
                 </xpath>
                 <xpath expr="//field[@name='bloc_ids']//div[@class='oe_module_vignette']" position="replace">
-                    <div class="oe_module_vignette">
+                    <div class="oe_module_vignette container">
                       <div class="row mb-2">
                         <div class="col-6">
                           <h5><field name="uid" /></h5>
