--- a/school_management/views/program_view.xml
+++ b/school_management/views/program_view.xml
@@ -725,7 +725,7 @@
                   <templates>
                       <t t-name="kanban-box">
                           <div style="position: relative">
-                              <div class="oe_module_vignette">
+                              <div class="oe_module_vignette container">
                                 <div class="row">
                                   <div class="col-12">
                                     <field name="uid" />
