--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -151,42 +151,26 @@
             <h5>Grille du bloc - <t t-esc="bloc.name"/></h5>
             <div>
                 <div>
-                    <t t-set="group" t-value=""/>
+                    <t t-set="course_group_group" t-value=""/>
                     <!-- Groupes de cours -->
                     <t t-foreach="bloc.course_group_ids.sorted(key=lambda r: r.cg_grouping_sequence)" t-as="course_group">
                         <!-- Groupe du groupe de cours -->
-                        <t t-if="course_group.cg_grouping.id != group">
+                        <t t-if="course_group.cg_grouping.id and course_group.cg_grouping.id != course_group_group">
                             <hr/>
-                            <h6><t t-esc="course_group.cg_grouping.name"/></h6>
+                            <h6>Groupe des groupes de cours : <t t-esc="course_group.cg_grouping.name"/></h6>
                             <hr/>
                         </t>
+                        <t t-set="course_group_group" t-value="course_group.cg_grouping.id"/>
                         <ul>
                             <!-- Groupe de cours -->
-                            <t t-set="group" t-value="course_group.cg_grouping.id"/>
                             <li>Code : <t t-esc="course_group.ue_id"/></li>
-                            <li> Unités d’enseignement : <a t-esc="course_group.title" t-att-href="'/groupe_de_cours/%s' % slug(course_group)" target="_self"/></li>
+                            <li> Unités d’enseignement (groupe de cours) : <a t-esc="course_group.title" t-att-href="'/groupe_de_cours/%s' % slug(course_group)" target="_self"/></li>
                             <li>Professeur : <t t-esc="course_group.responsible_id.name"/></li>
                             <li>Heures : <t t-esc="course_group.total_hours"/></li>
                             <li>ECTS : <t t-esc="course_group.total_credits"/></li>
-                            <li>
-                                Pré-requis : 
-                                <t t-if="course_group.pre_requisit_ids">
-                                    <span t-esc="', '.join(map( lambda x: str(x.preriquisit_id.uid), course_group.pre_requisit_ids))"/>
-                                </t>
-                                <t t-else="">
-                                    <span>/</span>
-                                </t>
-                            </li>
-                            <li>
-                                Co-requis : 
-                                <t t-if="course_group.co_requisit_ids">
-                                    <span t-esc="', '.join(map( lambda x: str(x.coriquisit_id.uid), course_group.co_requisit_ids))"/>
-                                </t>
-                                <t t-else="">
-                                    <span>/</span>
-                                </t>
-                            </li>
-                            <!-- Cours -->
+                            <li>Pré-requis : <t t-if="course_group.pre_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.preriquisit_id.uid), course_group.pre_requisit_ids))"/></t></li>
+                            <li> Co-requis : <t t-if="course_group.co_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.coriquisit_id.uid), course_group.co_requisit_ids))"/></t></li>
+                            <!-- Liste de cours -->
                             <li> Cours: 
                                 <t t-foreach="course_group.course_ids" t-as="course">
                                     <ul>
