--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -164,17 +164,19 @@
                         <ul>
                             <!-- Groupe de cours -->
                             <li>Code : <t t-esc="course_group.ue_id"/></li>
-                            <li> Unités d’enseignement (groupe de cours) : <a t-esc="course_group.title" t-att-href="'/groupe_de_cours/%s' % slug(course_group)" target="_self"/></li>
+                            <li>Unités d’enseignement (groupe de cours) : <a t-esc="course_group.title" t-att-href="'/groupe_de_cours/%s' % slug(course_group)" target="_self"/></li>
                             <li>Professeur : <t t-esc="course_group.responsible_id.name"/></li>
                             <li>Heures : <t t-esc="course_group.total_hours"/></li>
                             <li>ECTS : <t t-esc="course_group.total_credits"/></li>
                             <li>Pré-requis : <t t-if="course_group.pre_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.preriquisit_id.uid), course_group.pre_requisit_ids))"/></t></li>
-                            <li> Co-requis : <t t-if="course_group.co_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.coriquisit_id.uid), course_group.co_requisit_ids))"/></t></li>
+                            <li>Co-requis : <t t-if="course_group.co_requisit_ids"><span t-esc="', '.join(map( lambda x: str(x.coriquisit_id.uid), course_group.co_requisit_ids))"/></t></li>
+                            <li>Obligatoire : <t t-if="course_group.mandatory">Oui</t><t t-if="not(course_group.mandatory)">Non</t></li>
                             <!-- Liste de cours -->
-                            <li> Cours: 
+                            <li>Cours : 
                                 <t t-foreach="course_group.course_ids" t-as="course">
                                     <ul>
-                                        <li>Nom : <t t-esc="course.title"/></li>
+                                        <li>Nom : <a t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="new"/></li>
+                                        <li>Heures : <t t-esc="course.hours"/></li>
                                         <li>ECTS : <t t-esc="course.credits"/></li>
                                         <li>Pondération : <t t-esc="course.weight"/></li>
                                         <li>Quadri : <t t-esc="course.quadri"/></li>
@@ -204,112 +206,31 @@
     <!-- TODO à adapter -->
     <template id="groupe_de_cours_fiche">
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
-            <t t-set="title">Groupe de cours</t>
+            <t t-set="title" t-value="course_group.title"/>
             <div class="container">
-                <t t-set="desc" t-value="course_group"/>
-                <section>
-                    <div class="row mt64 mb64">
-                        <h1>
-                            Course Group Description
-                        </h1>
-                        <h1>
-                            <span t-field="course_group.title"/>
-                        </h1>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Course Group Informations</div>
-                        <div class="panel-body">
-                            <table class="table table-striped">
-                                <colgroup>
-                                    <col style="width:250px"/>
-                                    <col style="width:100%"/>
-                                </colgroup>
-                                <tbody>
-                                <tr>
-                                    <td>Code</td>
-                                    <td><span t-field="course_group.uid"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Cycle</td>
-                                    <td><span t-field="course_group.cycle_id.grade"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Teacher</td>
-                                    <td><span t-field="course_group.responsible_id"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Period</td>
-                                    <td><span t-field="course_group.period"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Credits</td>
-                                    <td><span t-field="course_group.total_credits"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Hours</td>
-                                    <td><span t-field="course_group.total_hours"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Mandatory</td>
-                                    <td><t t-if="course_group.mandatory"><input type="checkbox" value="" checked=""/></t><t t-if="not(course_group.mandatory)"><input type="checkbox" value=""/></t></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    
-                    <div class="panel panel-default">
-                        <div class="panel-heading">Course Informations</div>
-                        <div class="panel-body">
-                            <table class="table table-striped">
-                                <colgroup>
-                                    <col style="width:600px"/>
-                                    <col style="width:100px"/>
-                                    <col style="width:100px"/>
-                                    <col style="width:100px"/>
-                                </colgroup>
-                                <tr>
-                                <td>Title</td>
-                                <td>Hours</td>
-                                <td>Credits</td>
-                                <td>Weight</td>
-                                </tr>
-                                <tr t-foreach="course_group.course_ids" t-as="course">
-                                <td>
-                                    <a t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="new" style="cursor: pointer;"/>
-                                    <br/><t t-foreach="course.teacher_ids" t-as="teacher"><i style="color:grey;" t-esc="teacher.name"/><t t-if="teacher_index &lt; (teacher_size - 1)">,</t></t>
-                                </td>
-                                <td class="text-center"><t t-esc="course.hours"/></td>
-                                <td class="text-center"><t t-esc="course.credits"/></td>
-                                <td class="text-center"><t t-esc="course.weight"/></td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </section>
-                <t t-foreach="course_group.course_ids" t-as="course">
-                    <t t-set="desc" t-value="course.documentation_id"/>
-                    <t t-if="desc">
-                    <p style="page-break-after:always;">   </p>
-                    <t t-call="website_school_management.cours_fiche_details"/>
-                    </t>
-                    <t t-else="">
-                    <p style="page-break-after:always;">   </p>
-                    <section>
-                        <div class="row mt64 mb64">
-                            <h1>
-                                <t t-if="desc.state == 'draft'">Draft </t>Course Description
-                            </h1>
-                            <h1>
-                                <span t-field="course.name"/>
-                            </h1>
-                            <h2>
-                                Pas de descriptif disponible.
-                            </h2>
-                        </div>
-                    </section>
-                    </t>
-                </t>
+                <h1>Groupe de cours : <t t-esc="title"/></h1>
+                <ul>
+                    <li>Code : <span t-field="course_group.uid"/></li>
+                    <li>Cycle : <span t-field="course_group.cycle_id.grade"/></li>
+                    <li>Professeur : <span t-field="course_group.responsible_id"/></li>
+                    <li>Période : <span t-field="course_group.period"/></li>
+                    <li>Crédits : <span t-field="course_group.total_credits"/></li>
+                    <li>Heures : <span t-field="course_group.total_hours"/></li>
+                    <li>Obligatoire : <t t-if="course_group.mandatory">Oui</t><t t-if="not(course_group.mandatory)">Non</t></li>
+                    <li>Cours : 
+                        <t t-foreach="course_group.course_ids" t-as="course">
+                            <ul>
+                                <li>Nom : <a t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="new"/></li>
+                                <li>Heures : <t t-esc="course.hours"/></li>
+                                <li>ECTS : <t t-esc="course.credits"/></li>
+                                <li>Pondération : <t t-esc="course.weight"/></li>
+                                <li>Quadri : <t t-esc="course.quadri"/></li>
+                                <li>Professeurs : <span t-esc="', '.join(map( lambda x: x.name, course.teacher_ids))"/></li>
+                            </ul>
+                            <br/>
+                        </t>
+                    </li>
+                </ul>                           
             </div>
         </t>
     </template>
@@ -319,8 +240,12 @@
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
             <t t-set="title">Groupe de cours</t>
             <div class="container">
-                <h1>Pas de description</h1>      
-                <p>Veuillez contacter le secrétariat ou votre professeur pour obtenir plus d'informations sur cette activité.</p>
+                <div class="oe_structure">
+                    <h1>Pas de description</h1>      
+                    <p>Veuillez contacter le secrétariat ou votre professeur pour obtenir plus d'informations sur cette activité.</p>
+                    <hr/>
+                    <p style="text-align: center;"><a href="/programmes">Retour à la recherche</a></p>
+                </div>
             </div>
         </t>
     </template>
@@ -333,8 +258,7 @@
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
             <t t-set="title">Cours</t>
             <div class="container">
-                <t t-foreach="course_docs" t-as="course_doc">
-                    <t t-set="desc" t-value="course_doc"/>
+                <t t-foreach="course_docs" t-as="course_doc"> <!-- Problème car avec plusieurs course_doc, potentielle répétition -->
                     <t t-call="website_school_management.cours_fiche_details" />
                 </t>
             </div>
@@ -342,124 +266,52 @@
     </template>
 
   <template id="cours_fiche_details">
-      <section>
-        <div class="row mt64 mb64">
-            <h1>
-                <t t-if="desc.state == 'draft'">Draft </t>Course Description
-            </h1>
-            <h1>
-                <span t-field="desc.name"/>
-            </h1>
-            <h3 class="oe_fade">
-                by <span t-field="desc.author_id"/>
-            </h3>
+        <div>
+            <h1><t t-if="course_doc.state == 'draft'">Brouillon - </t>Détails du cours : <span t-field="course_doc.name"/></h1>
+            <h3>par <span t-field="course_doc.author_id"/></h3>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">Course Informations</div>
-            <div class="panel-body">
-                <table class="table table-striped">
-                    <colgroup>
-                        <col style="width:250px"/>
-                        <col style="width:100%"/>
-                    </colgroup>
-                    <tbody>
-                      <tr>
-                        <td>Cycle</td>
-                        <td><span t-field="desc.cycle_id"/></td>
-                      </tr>
-                      <tr>
-                        <td>Course Group</td>
-                        <td><span t-field="desc.course_group_id.ue_id"/> - <span t-field="desc.course_group_id"/></td>
-                      </tr>
-                      <tr>
-                        <td>Level</td>
-                        <td><span t-field="desc.level"/></td>
-                      </tr>
-                      <tr>
-                        <td>Credits</td>
-                        <td><span t-field="desc.credits"/></td>
-                      </tr>
-                      <tr>
-                        <td>Hours</td>
-                        <td><span t-field="desc.hours"/></td>
-                      </tr>
-                      <tr>
-                        <td>Weight</td>
-                        <td><span t-field="desc.weight"/></td>
-                      </tr>
-                      <tr>
-                        <td>Mandatory</td>
-                        <td><t t-if="desc.mandatory"><input type="checkbox" value="" checked=""/></t><t t-if="not(desc.mandatory)"><input type="checkbox" value=""/></t></td>
-                      </tr>
-                      <tr>
-                        <td>Language</td>
-                        <td><span t-field="desc.language"/></td>
-                      </tr>
-                      <tr>
-                        <td>Teachers</td>
-                        <td><span t-esc="', '.join(map( lambda x: x.name, desc.staff_ids))"/></td>
-                      </tr>
-                    </tbody>
-                 </table>
-            </div>
+        <div>
+            <ul>
+                <li>Cycle : <span t-field="course_doc.cycle_id"/></li>
+                <li>Groupe de cours : <span t-field="course_doc.course_group_id.ue_id"/> - <span t-field="course_doc.course_group_id"/></li>
+                <li>Niveau : <span t-field="course_doc.level"/></li>
+                <li>Crédits : <span t-field="course_doc.credits"/></li>
+                <li>Heures : <span t-field="course_doc.hours"/></li>
+                <li>Pondération : <span t-field="course_doc.weight"/></li>
+                <li>Obligatoire : <t t-if="course_doc.mandatory">Oui</t><t t-if="not(course_doc.mandatory)">Non</t></li>
+                <li>Langue : <span t-field="course_doc.language"/></li>
+                <li>Professeurs : <span t-esc="', '.join(map( lambda x: x.name, course_doc.staff_ids))"/></li>
+            </ul>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Schedule - <span t-field="desc.schedule"/></h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.schedule_text"/>
-          </div>
+
+        <div>
+            <h3 class="panel-title">Horaire - <span t-field="course_doc.schedule"/></h3>
+            <span t-raw="course_doc.schedule_text"/>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Content</h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.content"/>
-          </div>
+        <div>
+            <h3 class="panel-title">Contenu</h3>
+            <span t-raw="course_doc.content"/>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Method</h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.method"/>
-          </div>
+        <div>
+            <h3 class="panel-title">Méthode</h3>
+            <span t-raw="course_doc.method"/>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Learning outcomes</h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.learning_outcomes"/>
-          </div>
+        <div>
+            <h3 class="panel-title">Résultats d'apprentissage</h3>
+            <span t-raw="course_doc.learning_outcomes"/>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">References</h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.references"/>
-          </div>
+        <div>
+            <h3 class="panel-title">Références</h3>
+            <span t-raw="course_doc.references"/>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Pre-Co requiered</h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.pre_co_requiered"/>
-          </div>
+        <div>
+            <h3 class="panel-title">Pré-requis/Co-requis</h3>
+            <span t-raw="course_doc.pre_co_requiered"/>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Evaluation method</h3>
-          </div>
-          <div class="panel-body">
-            <span style="padding:5px;" t-raw="desc.evaluation_method"/>
-          </div>
+        <div>
+            <h3 class="panel-title">Méthode d'évaluation</h3>
+            <span t-raw="course_doc.evaluation_method"/>
         </div>
-      </section>
     </template>
 
     <template id="cours_fiche_vide">
